[package]
name = "target-lexicon-macros"
version = "0.1.0-alpha.1"
edition = "2021"
description = "Macros for target-lexicon"
license = "MIT OR Apache-2.0"
authors = ["Federico Maria Morrone <contact@morrone.dev>"]
repository = "https://github.com/morr0ne/target-lexicon-macros"
readme = "README.md"
documentation = "https://docs.rs/target-lexicon-macros"
include = ["src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
proc-macro2 = "1.0.40"
quote = "1.0.20"
syn = { version = "1.0.98", default-features = false, features = ["full", "parsing", "printing", "proc-macro"] }
target-lexicon = "0.12.4"

[lib]
proc-macro = true
